- Improve performance of HttpInputSourceHandler - Set default page for application to index.faces - Alter TopPointsPlayerMerger to return Top 10 (at most) players - Add top players file with 50.000 records for testing purposes - Alter logging level for httpclient from DEBUG to WARN

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -82,7 +82,8 @@
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>faces-config.xml</param-value>
     </context-param>
+
     <welcome-file-list>
-        <welcome-file>index.faces</welcome-file>
+        <welcome-file>start.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
