--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,5 +10,9 @@ log4j.logger.org.richfaces=error
 log4j.logger.org.springframework=error
 log4j.logger.org.apache=WARN
 log4j.logger.org.zisist=debug
+log4g.logger.org.apache.http.wire.content=error
+log4j.logger.org.apache.http=WARN
+log4j.logger.httpclient.wire.header=WARN
+log4j.logger.httpclient.wire.content=WARN
 
 log4j.rootLogger = all, leaderboard
