--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,12 @@
             <artifactId>twitter4j-core</artifactId>
             <version>2.2.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Leaderboard</finalName>
